# nonogram

./: .gitignore  README.md  datascript.py  main.py  nonogram.py  pyproject.toml
src/nonogram/: __init__.py  core.py  gram.py  grid.py  nonogram.py
src/nonogram/solve/: __init__.py  abc.py  core.py  detsearch.py  utils.py
tests/: test_nonoclue.py  test_nonogrid.py  test_nonogrid_array.py  utils.py
tests/data/: basegrams.json  edgegrams.json  uniquegrams.json
tests/solve/: test_clue_solutions.py
